<resources>
    <string name="app_name">OmniDrive</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="enter_your_email_address_to_n_reset_your_password">Enter your email address to reset your password</string>
    <string name="reset">Reset</string>
    <string name="reset_password">Reset Password</string>
    <string name="tyour_email"> Your Email</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Google Drive</string>
    <string name="tab_text_2">DropBox</string>
    <string name="tab_text_3">OneDrive</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="remember_me">Remember me</string>
    <string name="or">OR</string>
    <string name="omnidrive_logo">omnidrive_logo</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="action_create_account">Create account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="google_drive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="onedrive">OneDrive</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="change_password">Change Password</string>
    <string name="nothing_to_show_here">Nothing to show here</string>
</resources>