<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/google_drive"
            android:icon="@drawable/google_drive"
            android:iconTint="@null"
            android:title="@string/google_drive" />
        <item
            android:id="@+id/dropbox"
            android:icon="@drawable/dropbox"
            android:iconTint="@null"
            android:title="@string/dropbox" />
        <item
            android:id="@+id/onedrive"
            android:icon="@drawable/onedrive"
            android:iconTint="@null"
            android:title="@string/onedrive" />

        <item android:title="Category">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/account"
                        android:icon="@drawable/user"
                        android:title="Account" />
                    <item
                        android:id="@+id/settings"
                        android:icon="@drawable/settings_icon"
                        android:title="Settings" />
                    <item
                        android:id="@+id/logout"
                        android:icon="@drawable/logout"
                        android:title="Log Out" />
                </group>
            </menu>
        </item>

    </group>
</menu>